# Instruction-Polish

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
examples/: config.json  demo.py  demo_llm.py  sample_instructions.jsonl  sample_instructions.txt
src/instruction_polish/: __init__.py  __main__.py  batch.py  cli.py  config.py  core.py  scoring.py  strategies.py  suggest.py  utils.py
tests/: test_batch.py  test_cli.py  test_core.py  test_scoring.py  test_strategies.py  test_suggest.py
vln_instruction_parser/: __init__.py  aggregator.py  complexity.py  extractor.py  llm.py  normalizer.py  parser.py  resolver.py  schema.py  segmenter.py  semantic_compiler.py  validator.py
vln_instruction_parser/tests/: test_aggregator.py  test_complexity.py  test_confidence_policy.py  test_end_to_end.py  test_llm.py  test_multi_sentence.py  test_normalizer.py  test_parser.py  test_parser_semantic.py  test_regression.py  test_resolver.py  test_segmenter.py  test_semantic_compiler.py  test_step_features.py  test_validator.py
